--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -1,1 +1,11 @@
 <h1>Peyman's Portfolio</h1>
+
+{% for project in projects %}
+<h2>{{ project.title }}</h2>
+<img src="{{ project.image.url }}" alt="" height="400" width="400">
+
+{% if project.url %}
+<br><a href="{{ project.url }}">Link</a>
+{% endif %}
+
+{% endfor %}
