--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -1,5 +1,10 @@
 <h1>Peyman's Portfolio</h1>
 
+{% load static %}
+<img src="{% static 'home/pier_dock_sea_dusk_shore_118549_2560x1440.jpg' %}" alt="">
+
+<a href="{% static 'home/exam6.pdf' %}">Exam</a>
+
 {% for project in projects %}
 <h2>{{ project.title }}</h2>
 <img src="{{ project.image.url }}" alt="" height="400" width="400">
