--- a/blog/templates/blog/detail.html
+++ b/blog/templates/blog/detail.html
@@ -1,4 +1,8 @@
+{% extends 'home/base.html' %}
+
+{% block 'content' %}
 <h1>{{ blog.title }}
 </h1>
 <h3>{{ blog.date|date:'F jS Y' }}</h3>
 <br>{{ blog.content }}
+{% endblock %}
